--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Shanghai,China</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/jywu511"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
